# lakeflow_framework

./: .gitignore  .pylintrc  .style.yapf  README.md  VERSION  databricks.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/: CODEOWNERS
docs/: Makefile  README.md  build_versioned_docs.py  build_versioned_docs.sh  conf.py  custom_markdown_builder.py  log-style-fix-plan.md  make.bat  nodespec_feature_samples_changes.md  nodester_feature_samples_changes.md  select_versions.py  skill-development.md  src-libraries-design.md  src-libraries-plan.md
pipeline_bundle_template/: README.md  databricks.yml  databricks_template_schema.json
samples/: README.md  common.sh  deploy.sh  deploy_and_test.sh  deploy_and_test_tpch.sh  deploy_bronze.sh  deploy_feature_samples.sh  deploy_gold.sh  deploy_nodespec.sh  deploy_nodester.sh  deploy_orchestrator.sh  deploy_pattern_samples.sh  deploy_silver.sh  deploy_tpch.sh  deploy_tpch_and_test.sh  deploy_yaml.sh  destroy.sh  destroy_tpch.sh
scripts/: README.md  convert_json_to_yaml.py  generate_lockfiles.sh  migrate_to_nodespec.py  migrate_to_nodester.py  validate_dataflows.py
skills/: README.md  SKILL.md
src/: __init__.py  api_utils.py  bundle_loader.py  config_resolver.py  constants.py  dataflow_spec.py  dlt_pipeline.ipynb  dlt_pipeline.py  dlt_pipeline_builder.py  extension_loader.py  logger.py  pipeline_config.py  pipeline_details.py  secrets_manager.py  substitution_manager.py  utility.py
tests/: README.md  conftest.py  helpers.py  (+7 more)
(+1085 files in other folders)
